aligned asset numbers and reporting period. Each section has a checkbox and shows correctly on view.

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -149,6 +149,9 @@ footer a{
 .margin-bottom-neg30 {
     margin-bottom: -30px;
 }
+.margin-bottom-20{
+    margin-bottom:20px;
+}
 /*---------------------------
     Padding
 ----------------------------*/
